# AutoRAG-data

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  auto-imports.d.ts  components.d.ts  eslint.config.cjs  package.json  pnpm-lock.yaml  vite.config.ts
ai_instructions/: db_schema.md
postgresql/: .env.example  docker-compose.yml
postgresql/db/init/: 001-schema.sql
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/cache/: manager.rs  mod.rs
src-tauri/src/commands/: cache.rs  database.rs  documents.rs  export.rs  images.rs  ingest.rs  mod.rs  queries.rs
src-tauri/src/db/: connection.rs  models.rs
src-tauri/src/ingest/: mod.rs  pdf.rs  types.rs
src-tauri/src/state/: app_state.rs
src/assets/: main.css
src/components/annotation/: AnnotationPanel.vue  EvidenceList.vue  QueryForm.vue  QueryList.vue
src/components/connection/: ConnectionDialog.vue
src/components/documents/: DeleteDocumentDialog.vue  DocumentSelector.vue
src/components/export/: ExportPanel.vue
src/components/ingest/: IngestDialog.vue
src/components/layout/: AppLayout.vue  StatusBar.vue
src/components/pages/: PageGrid.vue  PagePreview.vue  PageThumbnail.vue  PdfViewer.vue
src/composables/: index.ts  useKeyboardShortcuts.ts  usePageSelection.ts  usePdfPageObserver.ts  useQuickPreview.ts
src/stores/: annotation.ts  connection.ts  documents.ts  export.ts  index.ts  ingest.ts  selection.ts  ui.ts
